Nov 22, 2012 -- version 0.0.7
    - Updated to OpenBSD 5.0; the C structures have undergone some minor
      changes.
    - Added support for divert-* options in PF rules.
    - Added a new PacketFilter.get_ifaces() method to retrieve the list of
      interfaces and interface drivers known to pf(4).
    - Created a new PFIface class representing a network interface and returned
      by the PacketFilter.get_ifaces() method; this class also allows the
      retrieval of per-interface statistics.
    - Renamed the PacketFilter.set_ifflag() method to PacketFilter.set_ifflags()
      for consistency with PacketFilter.get_ifflags().

Jul 9, 2011 -- version 0.0.6
    - Added support for packet queueing with ALTQ; three new classes have been
      created (PFAltqCBQ, PFAltqHFSC and PFAltqPriQ), corresponding to the
      schedulers supported by OpenBSD.

Jan 19, 2011 -- version 0.0.5
    - Updated to OpenBSD 4.8; the PF stack has undergone some major changes,
      such as removing the different rule types (nat, rdr, binat ... rules do
      not exist anymore) and introducing 'match' rules.
      This has greatly simplified the PFRuleset class and the PacketFilter
      methods that load/retrieve rules.
    - Various bugs have been corrected
    - All the code has been reviewed and is now Py3k-ready.

Jul 26, 2009 -- version 0.0.4

    - Updated to OpenBSD-current; modifications include the removal of 'scrub'
      rules and making some ioctl() transactional (set loginterface, set hostid,
      set reassemble and set debug).
    - Added addresses to PFTable objects; this should make managing tables much
      more user-friendly.
    - Added the PF_RULESET_TABLE ruleset to PFRuleset; this allows loading
      tables along with the other rules and doesn't require that the 'persist'
      flag be set if the table is not yet referenced by any rule.
    - Added the PacketFilter.set_reassembly() method.